# NLP_headline_body_sentiment

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
data/: clean_gvfc_sentiment.csv  clean_gvfc_sentiment_v2.csv
notebooks/: 00_scrape.ipynb  01_explore.ipynb  02_preprocess_clean.ipynb  03_sentiment_model.ipynb  04_gap_and_stats.ipynb  05_visualize.ipynb  06_outlet_bias.ipynb
scripts/: smoke_check.py
src/nlp_headline_body_sentiment/: analysis.py  bias.py  cleaning.py  datasets.py  paths.py  pipeline.py  reporting.py  sentiment.py  vader_sentiment.py  validation.py  viz.py
